--- a/.env
+++ b/.env
@@ -8,12 +8,14 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel_crm
-# DB_USERNAME=root
-# DB_PASSWORD=root
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel_crm
+DB_USERNAME=root
+DB_PASSWORD=root
+
+ELASTICSEARCH_HOST=http://localhost:9200
 
 MONGO_DB_HOST=127.0.0.1
 MONGO_DB_PORT=27017
